[package]
name = "dice_forge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apachi-2.0"
description = "A small crate to preform basic math using dice notation for random numbers"
readme = "README.md"
repository = "https://github.com/domiryuu/DiceForge"
keywords = ["gamedev", "dice", "random", "math"]
categories = ["game-development","mathematics",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
